fix(a11y): Contraste bordure > 3:1. RGAA 3.3

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
     position:fixed; left: 10px; top: 11px; display: inline-block; color: #767676; text-decoration: none; font-family: monospace;
     font-size: 10px;
     border-radius: 99px;
-    border: 1px solid grey;
+    border: 1px solid #909090;
     width: 13px;
     height: 13px;
     text-align: center;
